@@ -1,3 +1,15 @@
+2009-06-18  Vivek Dasmohapatra  <vivek@etla.org>
+
+	* handlers/notify_search_callback.c (_h_elim_notify_search_callback): 
+	use the cached row data rather than the ephemeral row data which may 
+	have been freed by now ( judging by the example in the pidgin source, 
+	this is the right approach here ).
+	* ui_ops/notify_ui_ops.c (_elim_notify_search): call the standard purple
+	`more search rows' function instead of assuming our callback is in place
+	and calling it directly. Unlikely thyat we were wrong, but just in case.
+	(_elim_notify_search_rows): cache the ephemeral row data we get here
+	* elim-rpc.h (_NOTIFY_RESP): search row data is ephemeral: cache it here
+
 2009-06-17  Vivek Dasmohapatra  <vivek@etla.org>
 
 	* elisp/garak.el:
